--- a/custom_components/sundue_modbus/services.yaml
+++ b/custom_components/sundue_modbus/services.yaml
@@ -43,7 +43,7 @@ update_charge_period:
       example: "''"
       selector:
         device:
-          integration: foxess_modbus
+          integration: sundue_modbus
           entity:
             # Only charge periods provide binary_sensors with class power, for charge period on/off
             domain: "binary_sensor"
