--- a/custom_components/sundue_modbus/services.yaml
+++ b/custom_components/sundue_modbus/services.yaml
@@ -12,7 +12,7 @@ write_registers:
       example: "''"
       selector:
         device:
-          integration: foxess_modbus
+          integration: sundue_modbus
     start_address:
       name: Start Address
       description: Start address to write to
@@ -108,7 +108,7 @@ update_all_charge_periods:
       example: "''"
       selector:
         device:
-          integration: foxess_modbus
+          integration: sundue_modbus
           entity:
             # Only charge periods provide binary_sensors with class power, for charge period on/off
             domain: "binary_sensor"
